fix: style adjustments to make the widgets more responsive on smaller devices.

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ body {
   text-align: center;
   width: 400px;
   height: 510px;
-  margin: auto;
 }
 .glass {
   background: #fff;
