--- a/src/widgets/style/Calculator.css
+++ b/src/widgets/style/Calculator.css
@@ -10,8 +10,6 @@
 }
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
@@ -20,7 +18,7 @@
   padding: 20px;
   height: 510px;
   width: 400px;
-  margin: auto;
+
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: var(--calc-bg);
