--- a/src/widgets/style/News.css
+++ b/src/widgets/style/News.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin-top: 20px;
+  padding-top: 0px;
+  margin-top: 40px;
   overflow-y: scroll;
   height: 450px;
 }
